# StudyZinx

./: README.md
StudyZinx_Echo_TCP/: CMakeLists.txt
StudyZinx_Echo_TCP/include/: cmdcheckprotocol.hpp  cmdmsg.hpp  roles.hpp  stdinoutchannel.hpp
StudyZinx_Echo_TCP/src/: cmdcheckprotocol.cpp  cmdmsg.cpp  main.cpp  roles.cpp  stdinoutchannel.cpp
